[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Wire.gd" type="Script" id=1]
[ext_resource path="res://Objects/Spatial.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.05, 0.05 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.01, 0.05, 0.05 )

[node name="RigidBody" type="RigidBody" groups=[
"movable",
"wire",
]]
collision_layer = 786441
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="pos" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.46, 0, 0 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="pos"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0507011, 0, 0 )
shape = SubResource( 3 )

[node name="neg" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.46, 0, 0 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="neg"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.051, 0, 0 )
shape = SubResource( 3 )

[node name="Spatial" type="Spatial" parent="."]
script = ExtResource( 2 )

[connection signal="body_entered" from="pos" to="." method="positive_connect"]
[connection signal="body_exited" from="pos" to="." method="positive_disconnect"]
[connection signal="body_entered" from="neg" to="." method="negative_connect"]
[connection signal="body_exited" from="neg" to="." method="negative_disconnect"]
